--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    
+    <p class="paragraf1" id="p1">Paragraf 1</p>
+    <p class="paragraf2" id="p2">Paragraf 2</p>
+    <p class="paragraf3" id="p3">Paragraf 3</p>
+    <p class="paragraf4" id="p4">Paragraf 4</p>
+    <p class="paragraf5" id="p5">Paragraf 5</p>
+    <p class="paragraf6" id="p6">Paragraf 6</p>
+    <p class="paragraf7" id="p7">Paragraf 7</p>
+    <p class="paragraf8" id="p8">Paragraf 8</p>
+    <p class="paragraf9" id="p9">Paragraf 9</p>
+    <p class="paragraf10" id="p10">Paragraf 10</p>
+
 </body>
+
 </html>
